<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/image"
            android:src="@drawable/task21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/task"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <prague.castle.escape.views.ClickableTextView
            android:id="@+id/description"
            android:textColorLink="@color/primaryColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintBottom_toTopOf="@+id/chip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toTopOf="@+id/choice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/option1"
                android:text="@string/cigar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/option2"
                android:text="@string/pepperoni"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/option3"
                android:text="@string/vodka"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:backgroundTint="@color/card_background"
            android:id="@+id/choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/offer_exchange"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/chip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>