<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/top_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true">

            <prague.castle.escape.views.ClickableTextView
                android:id="@+id/description"
                android:textColorLink="@color/primaryColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:scrollbars="vertical"
                android:justificationMode="inter_word"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </androidx.core.widget.NestedScrollView>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/image"
            android:src="@drawable/task26_eu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/task"
            app:layout_constraintTop_toBottomOf="@+id/top_guideline"
            app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:backgroundTint="@color/button_background"
            android:id="@+id/change_QRCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/show_CZ_QRCode"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/bottom_guideline"
            app:layout_constraintBottom_toTopOf="@+id/save_QRCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:backgroundTint="@color/button_background"
            android:id="@+id/save_QRCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/save_QRCode"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/change_QRCode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>