<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/top_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/image"
            android:src="@drawable/task25"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/task"
            app:layout_constraintTop_toBottomOf="@+id/top_guideline"
            app:layout_constraintBottom_toTopOf="@id/middle_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/middle_guideline"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/team_name"
            android:inputType="text"
            android:textAlignment="center"
            android:maxLength="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
            app:layout_constraintBottom_toTopOf="@id/save_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.razzaghimahdi78.dotsloading.linear.LoadingScaly
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dots_count="3"
            app:dots_color="@color/primaryColor"
            app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
            app:layout_constraintBottom_toTopOf="@id/save_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:backgroundTint="@color/button_background"
            android:id="@+id/save_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/save_result"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>